src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_max_pool3d_with_indices(value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_max_pool3d_with_indices_backward(value grad_output, value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode, value indices);
value atg_max_pool3d_with_indices_backward_grad_input(value grad_input, value grad_output, value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode, value indices);
value atg_max_pool3d_with_indices_out(value out, value indices, value self, value kernel_size, value stride, value padding, value dilation, int ceil_mode);
value atg_max_unary_out(value out, value self);
value atg_max_unpool2d(value self, value indices, value output_size);
value atg_max_unpool2d_out(value out, value self, value indices, value output_size);
value atg_max_unpool3d(value self, value indices, value output_size, value stride, value padding);
value atg_max_unpool3d_out(value out, value self, value indices, value output_size, value stride, value padding);
value atg_maximum(value self, value other);
value atg_maximum_out(value out, value self, value other);
value atg_mean(value self, int dtype);
value atg_mean_dim(value self, value dim, int keepdim, int dtype);
value atg_mean_dtype_out(value out, value self, int dtype);
value atg_mean_out(value out, value self, value dim, int keepdim, int dtype);
value atg_median(value self);