src/bindings/torch_bindings_generated4.ml


  let stubs_max_pool3d_with_indices =
    foreign
      "atg_max_pool3d_with_indices"
      (ptr raw_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_max_pool3d_with_indices_backward =
    foreign
      "atg_max_pool3d_with_indices_backward"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_max_pool3d_with_indices_backward_grad_input =
    foreign
      "atg_max_pool3d_with_indices_backward_grad_input"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> gc_tensor
       @-> returning raw_tensor)
  ;;

  let stubs_max_pool3d_with_indices_out =
    foreign
      "atg_max_pool3d_with_indices_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_max_unary_out =
    foreign "atg_max_unary_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_max_unpool2d =
    foreign
      "atg_max_unpool2d"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_max_unpool2d_out =
    foreign
      "atg_max_unpool2d_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_max_unpool3d =
    foreign
      "atg_max_unpool3d"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_max_unpool3d_out =
    foreign
      "atg_max_unpool3d_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_maximum =
    foreign "atg_maximum" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_maximum_out =
    foreign
      "atg_maximum_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_mean = foreign "atg_mean" (gc_tensor @-> int @-> returning raw_tensor)

  let stubs_mean_dim =
    foreign
      "atg_mean_dim"
      (gc_tensor @-> ptr int64_t @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_mean_dtype_out =
    foreign "atg_mean_dtype_out" (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_mean_out =
    foreign
      "atg_mean_out"
      (gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_median = foreign "atg_median" (gc_tensor @-> returning raw_tensor)
end

module C (F : Cstubs.FOREIGN) = struct
  include C0 (F)
  include C1 (F)
  include C2 (F)
  include C3 (F)
end
